<resources>
    <string name="app_name">Anti Theft</string>
    <string name="have_no_photo">Have no photo</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_photos">Delete all photos</string>
    <string name="delete_photo">Delete photo</string>
    <string name="enter_wrong_password">Enter wrong password</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="save_successfully">Save successfully</string>
    <string name="activated">Alarm Activated</string>
    <string name="plug_in_the_charge">Plug in the charger to use!</string>
    <string name="battery_full">The battery is full!</string>
    <string name="plug_in_headphones">Plug in headphones to use!</string>
    <string name="settings">Settings</string>
    <string name="pin_lock">Pin lock</string>
    <string name="pattern_lock">Pattern drawing lock</string>
    <string name="switch_to_pattern">Switch to pattern drawing lock</string>
    <string name="switch_to_pin">Switch to pin lock</string>
    <string name="activated_proximity">Enabled proximity detection.</string>
    <string name="activated_motion">Motion detection enabled.</string>
    <string name="activated_charge">Charger detection enabled.</string>
    <string name="activated_headphone">Enabled headphone withdrawal detection.</string>
    <string name="activated_battery_full">Enabled full battery detection.</string>
    <string name="neighborhood">Neighborhood Detection</string>
    <string name="motion">Motion Detection</string>
    <string name="charger">Charger Detection</string>
    <string name="headphone">Headphone Withdrawal Detection</string>
    <string name="battery">Full Battery Detection</string>
    <string name="description_neighborhood">Detected when taken out of the bag</string>
    <string name="description_motion">Detect when device moves</string>
    <string name="description_charger">Detect when disconnecting charger</string>
    <string name="description_headphone">Detect when disconnecting headphones</string>
    <string name="description_battery">Detect when battery is full</string>
    <string name="volume">Volume</string>
    <string name="sound">Notification sound</string>
    <string name="vibrate">Turn on vibrate for Notification</string>
    <string name="flash">Turn on LED Flash for Notification</string>
    <string name="trigger_timer">Trigger timer</string>
    <string name="change_password">Change password</string>
    <string name="hide_pattern_line">Hide pattern line</string>
    <string name="thief_photo">Intruder Selfie</string>
    <string name="sound_option">Notification sound option</string>
    <string name="sound1">Sound 1</string>
    <string name="sound2">Sound 2</string>
    <string name="sound3">Sound 3</string>
    <string name="sound4">Sound 4</string>
    <string name="sound5">Sound 5</string>
    <string name="sound6">Sound 6</string>
    <string name="save">Save</string>
    <string name="timer_option">Activation timer option</string>
    <string name="timer1">3 seconds</string>
    <string name="timer2">5 seconds</string>
    <string name="timer3">10 seconds</string>
    <string name="timer4">15 seconds</string>
    <string name="timer5">20 seconds</string>
    <string name="timer6">25 seconds</string>
    <string name="timer7">30 seconds</string>
    <string name="active">Activate</string>
    <string name="password_enter_wrong">Password enter wrong:</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>
    <string name="more_apps">More Apps</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="version">Version</string>
    <string name="warning">Enter password to turn off notification</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="too_short">Too short, please re-enter</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password_successfully">Change password successfully</string>
    <string name="redraw_password">Redraw password</string>
    <string name="create_password_successfully">Create password successfully</string>
    <string name="missing_input">Missing input</string>
    <string name="draw_new_password">Draw a new password</string>
    <string name="warning_tone">Warning Tone</string>
    <string name="set_timer">Set timer</string>
    <string name="exit">Exit</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="SAW_permission">Grant permission to display on other applications</string>
    <string name="grant_now">Grant Now</string>
    <string name="take_photo_permission">Grant access to internal storage and camera to use this feature.</string>
</resources>