<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/shape_dialog"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="@dimen/_210sdp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/set_timer"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_close"
                android:layout_alignParentRight="true"
                android:padding="@dimen/_4sdp"
                app:tint="@color/black" />
        </RelativeLayout>
        <RadioGroup
            android:id="@+id/radioGroupTimeCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radTime1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer1"/>
            <RadioButton
                android:id="@+id/radTime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer2"/>
            <RadioButton
                android:id="@+id/radTime3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer3"/>
            <RadioButton
                android:id="@+id/radTime4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer4"/>
            <RadioButton
                android:id="@+id/radTime5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer5"/>
            <RadioButton
                android:id="@+id/radTime6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer6"/>
        </RadioGroup>
        <TextView
            android:id="@+id/txtApply"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_8sdp"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/shape_button_apply"/>
    </LinearLayout>

</RelativeLayout>