<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_dialog"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <RelativeLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/warning_tone"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_alignParentRight="true"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_close"
                app:tint="@color/gray" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/radioGroupSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radSound1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound1" />

            <RadioButton
                android:id="@+id/radSound2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MyRadioButton"
                android:text="@string/sound2" />

            <RadioButton
                android:id="@+id/radSound3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound3" />

            <RadioButton
                android:id="@+id/radSound4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound4" />

            <RadioButton
                android:id="@+id/radSound5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound5" />

            <RadioButton
                android:id="@+id/radSound6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound6" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtApply"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/shape_button_apply"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingTop="@dimen/_6sdp"
            android:paddingRight="@dimen/_8sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

</RelativeLayout>