<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_180sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/shape_options"
    android:padding="@dimen/_12sdp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/shape_permission"/>

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_permission" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/permission_needed"
        android:textStyle="bold"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/txtPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SAW_permission"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/gray"
        android:layout_marginTop="@dimen/_6sdp"/>
    <TextView
        android:id="@+id/txtGrantPermission"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/grant_now"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:padding="@dimen/_4sdp"
        android:gravity="center_horizontal"
        android:background="@drawable/shape_button_apply"
        android:layout_marginTop="@dimen/_12sdp"/>
</LinearLayout>