<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_155sdp">

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_logo"
            android:onClick="clickLogo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            android:padding="@dimen/_4sdp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:onClick="clickPrivacyPolicy">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_privacy"
            android:padding="@dimen/_4sdp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/privacy_policy"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_4sdp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/_54sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:onClick="clickRate">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_rate"
            android:padding="@dimen/_4sdp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rate"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_4sdp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/_54sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:onClick="clickFeedback">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_feedback"
            android:padding="@dimen/_4sdp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feedback"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_4sdp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/_54sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:onClick="clickMoreApps">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_more"
            android:padding="@dimen/_6sdp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/more_apps"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_4sdp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/_54sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:onClick="clickShare">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_share"
            android:padding="@dimen/_2sdp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_4sdp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remi co, LTD"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="italic"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:visibility="gone"/>

</LinearLayout>